--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,11 @@
   margin-top: 50px;
 }
 
+.layout_padding .about_section .img-box .about-img {
+  -webkit-transform: none;
+  transform: none;
+}
+
 .layout_padding {
   margin-top: 110px;
   padding-top: 0 !important;
