--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
   background-color: #031003;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 .layout_margin {
   margin-top: 90px;
   margin-bottom: 90px;
@@ -1112,11 +1116,20 @@ body.modal-open {
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
+  justify-content: flex-start;
+  /* background-color: white; */
+  /* border-radius: 10px; */
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+  margin-left: -10px;
 }
 
 .info_section .social_box a {
-  margin: 0 10px;
+  margin: 0 5px;
+  padding: 5px;
+  float: left;
+  /* border-radius: 10%; */
+  /* background-color: white; */
 }
 
 .info_section a {
@@ -1214,13 +1227,211 @@ body.modal-open {
 }
 
 .close {
-  position: absolute;
-  right: -30px;
+  /* position: absolute; */
+  /* right: 0px; */
   top: 0;
   z-index: 999;
   font-size: 2rem;
   font-weight: normal;
-  color: #fff;
+  color: black;
   opacity: 1;
 }
+
+.form-main {
+  background-size: cover;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form-main .main-wrapper {
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 40px;
+  width: 100%;
+  box-shadow: 0 0 5px 5px #00000020;
+  backdrop-filter: blur(5px);
+  /* background-color: #aeaeae; */
+  @media screen and (max-width: 991px) {
+    width: 70%;
+  }
+  @media screen and (max-width: 767px) {
+    width: 90%;
+  }
+}
+.form-main .main-wrapper .form-head {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0px 0 25px;
+}
+.form-main .main-wrapper .form-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
+}
+.form-main .main-wrapper .form-wrapper .form-card {
+  position: relative;
+  width: 100%;
+}
+.form-main .main-wrapper .form-wrapper .form-card .form-input {
+  padding: 10px 15px 10px;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 5px;
+  background: white;
+  outline: none;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  box-sizing: border-box;
+}
+.form-main .main-wrapper .form-wrapper .form-card .form-input:valid,
+.form-main .main-wrapper .form-wrapper .form-card .form-input:focus {
+  border: 1px solid #515151;
+}
+.form-main .main-wrapper .form-wrapper .form-card .form-label {
+  color: black;
+}
+
+.form-main
+  .main-wrapper
+  .form-wrapper
+  .form-card
+  .form-input:valid
+  ~ .form-label,
+.form-main
+  .main-wrapper
+  .form-wrapper
+  .form-card
+  .form-input:focus
+  ~ .form-label {
+  color: #515151;
+  top: 30%;
+  transform: translateY(-70%);
+  font-size: 13px;
+  line-height: 23px;
+}
+
+.form-main .main-wrapper .form-wrapper .form-card .form-input:-webkit-autofill,
+.form-main
+  .main-wrapper
+  .form-wrapper
+  .form-card
+  .form-input:-webkit-autofill:hover,
+.form-main
+  .main-wrapper
+  .form-wrapper
+  .form-card
+  .form-input:-webkit-autofill:focus,
+.form-main
+  .main-wrapper
+  .form-wrapper
+  .form-card
+  .form-input:-webkit-autofill:active {
+  transition: background-color 9999s ease-in-out 0s;
+}
+.form-main
+  .main-wrapper
+  .form-wrapper
+  .form-card
+  .form-input::-webkit-outer-spin-button,
+.form-main
+  .main-wrapper
+  .form-wrapper
+  .form-card
+  .form-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.form-label {
+  position: absolute;
+  left: 25px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  transition: 0.3s;
+  margin: 0;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 500;
+}
+.form-textarea {
+  padding: 10px 15px 10px;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 5px;
+  background: white;
+  outline: none;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  resize: none;
+  box-sizing: border-box;
+}
+.form-textarea:valid,
+.form-textarea:focus {
+  border: 1px solid #515151;
+}
+
+.form-textarea:valid ~ .form-textarea-label,
+.form-textarea:focus ~ .form-textarea-label {
+  color: #515151;
+  top: 18%;
+  transform: translateY(-82%);
+  font-size: 13px;
+  line-height: 23px;
+}
+
+.form-textarea:-webkit-autofill,
+.form-textarea:-webkit-autofill:hover,
+.form-textarea:-webkit-autofill:focus,
+.form-textarea:-webkit-autofill:active {
+  transition: background-color 9999s ease-in-out 0s;
+}
+
+.form-textarea-label {
+  color: black;
+  position: absolute;
+  left: 25px;
+  top: 30%;
+  transform: translateY(-70%);
+  pointer-events: none;
+  transition: 0.3s;
+  margin: 0;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 500;
+}
+.btn-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0 0;
+}
+.btn-wrap button {
+  padding: 0 32px;
+  font-size: 18px;
+  line-height: 48px;
+  border: 1px solid transparent;
+  font-weight: 600;
+  border-radius: 6px;
+  transition: all 0.5s ease;
+  cursor: pointer;
+  box-shadow: 0 0 5px 5px #00000020;
+}
+.btn-wrap button:hover {
+  border: 1px solid #e2e1e1;
+  background: #e2e1e1;
+}
+
 /*# sourceMappingURL=style.css.map */
